# famous-chinese

./: Cargo.toml
projects/famous-chinese/: Cargo.toml  Readme.md
projects/famous-chinese/src/: filter_page.rs  main.rs  pair_tags.rs  people_group.rs
projects/wikipedia/: .gitignore
