[package]
name = "famous-chinese"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
tl = { version = "0.7.7", features = ["simd"] }
regex = "1.7.1"
quick-xml = { version = "0.27.1", features = ["encoding"] }
utf8-chars = "2.0.3"
itertools = "0.10.5"

[dev-dependencies]

[features]
default = []
